Fixed name not centered

--- a/css/theme.css
+++ b/css/theme.css
@@ -103,17 +103,28 @@ body {
 
 /* Desktop */
 
-@media only screen and (min-width:1200px) {
+@media only screen and (min-width:1000px) {
+    .box {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        height: 100%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+    }
+
     #name-container {
         position: relative;
         margin-left: 4.5714em;
-        margin-top: 14vh;
     }
     .last-name {
         text-indent: 1em;
     }
     .social {
-        left: 70vw;
+        left: 80vw;
         width: 0.5em;
         height: 70vh;
     }
